Fix safe area padding on IOS

--- a/expenses/src/App.css
+++ b/expenses/src/App.css
@@ -1,3 +1,6 @@
+html {
+  padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+}
 body {
   width: 100%;
   height: 100%;
